[package]
name = "arcane"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
crossterm = "0.28"
ratatui = "0.28"

color-eyre = "0.6"
ansi-to-tui = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"
tui-logger = {version="0.13", features=["tracing-support"]}
log = "0.4"

directories = "5"
derive_more = {version="1", features=["debug"]}
dyn-clone = "1"

[dev-dependencies]
proptest = "1"
