[package]
name = "arcane"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
arcane_core = {path="../arcane_core"}
arcane_anymap = {path="../arcane_anymap"}

error_mancer = "0.4"

crossterm = {version="0.28"}
ratatui = {version="0.29"}

color-eyre = "0.6"
ansi-to-tui = "7"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-error = "0.2"

derive_more = {version="1", features=["debug"]}
bytecount = {version="0.6", features=["generic-simd"]}


# Todo: do some magic to allow the user to dynamicly define these
arcane_keybindings = {path="../arcane_keybindings"}
arcane_keybindings_window = {path="../arcane_keybindings_window"}
arcane_settings = {path="../arcane_settings"}
arcane_settings_window = {path="../arcane_settings_window"}
arcane_windows = {path="../arcane_windows"}

arcane_splashscreen = {path="../arcane_splashscreen"}
arcane_fps = {path="../arcane_fps"}

arcane_file_browser = {path="../arcane_file_browser"}

[build-dependencies]
toml = "0.8"  # for parsing Cargo.toml

[features]
ansi_log_file = []
