[package]
name = "arcane_core"
version = "0.1.0"
edition = "2021"

[dependencies]
arcane_anymap = {path="../arcane_anymap"}

crossterm = "0.28"
derive_more = {version="1", features=["debug"]}
color-eyre = "0.6"
ratatui = {version="0.29", features=["serde"]}
tracing = "0.1"
directories = "5"
inventory = "0.3"
dyn-clone = "1"
