[package]
name = "arcane_keybindings"
version = "0.1.0"
edition = "2021"

[dependencies]
arcane_core = { path = "../arcane_core" }
arcane_anymap = { path = "../arcane_anymap" }

error_mancer = "0.4"
derive_more = {version="1", features=["debug"]}
crossterm = {version="0.28", features=["serde"]}

serde = {version="1", features=["derive"]}
serde_json = "1"
typetag = "0.2"

trie-rs = "0.4"
ouroboros = "0.18"
