[package]
name = "arcane_settings_window"
version = "0.1.0"
edition = "2021"

[dependencies]
arcane_core = { path = "../arcane_core" }
arcane_keybindings = { path = "../arcane_keybindings" }
arcane_settings = { path = "../arcane_settings" }
arcane_windows = { path = "../arcane_windows" }

error_mancer = "0.4"
ratatui = "0.29"

serde = { version = "1", features = ["derive"] }
typetag = "0.2"

